[package]
name = "algo_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.7"
algorithms = { path = "./algorithms" }
data_structures = { path = "./data_structures" }

[workspace]
members = [
  "algorithms",
  "data_structures"
]
